flux/traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: traefik-ingress
    namespace: kube-system
    annotations:
        traefik.ingress.kubernetes.io/router.middlewares: default-allow-local-only@kubernetescrd
        kubernetes.io/ingress.class: traefik
spec:
    rules:
        - host: "traefik.home"
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: traefik
                            port:
                                number: 9100
